--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.8.1",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
@@ -18,6 +19,7 @@
     "next": "15.2.0",
     "next-auth": "^4.24.11",
     "nodemailer": "^6.10.0",
+    "postcss": "^8.5.3",
     "razorpay": "^2.9.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -25,9 +27,9 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.0.9",
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
-    "tailwindcss": "^4"
+    "tailwindcss": "^4.0.9"
   }
 }
